--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^9.8.6",
     "clarifai": "^2.9.1",
+    "framer-motion": "^3.1.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-parallax-tilt": "^1.4.68",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
