created gh-pages branch, deployed website

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://lirobinxc.github.io/facial-detection-app/",
   "name": "facial-detection-app",
   "version": "0.1.0",
   "private": true,
@@ -28,7 +29,9 @@
     "eject": "react-scripts eject",
     "pregit": "git add .",
     "git": "git commit -m",
-    "postgit": "git push"
+    "postgit": "git push",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
